# cicada-uxs

./: .gitignore  .gitmodules
challenge/: config.py
cicada/: CMakeLists.txt
cicada/include/cicada/: mavlink_parser.hpp  telemetry_store.hpp
mavsdk-app/src/: app.py  drone_control.py  intent_parser.py  pathfinder.py  validator.py
uxs-hackathon/: CHALLENGE_BRIEF.md  README.md  launch_sitl.sh
